1-namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: namespace-roboshop 
  labels:
    project: roboshop
    environment: dev
