14-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    purpose: Deployment-demo
    project: roboshop
    environment: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      project: roboshop
      environment: dev
  template:
    metadata:
      labels:
        purpose: Deployment-demo
        project: roboshop
        environment: dev
    spec:
      containers:
      - name: nginx
        image: nginx:stable-perl
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-svc
#   labels:
#     purpose: service-demo
#   spec:
#     selector:
#         purpose: Deployment-demo
#         project: roboshop
#         environment: dev
#     ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
