16-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: flentdels
  namespace: kube-system
  labels:
    name: roboshop
spec:
  selector:
    matchLabels:
      name: roboshop
  templates:
    metadata:
      labels:
        name: roboshop
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: roboshop
          image: quay.io/fluentd_elasticsearch/fluentd:v5.0.1
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
              readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
