2-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx
  labels:
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
