3-multicontainer.yaml
apiVersion: v1
kind: Pod

metadata:
  name: multi-container
  labels:
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
  - name: almalinux
    image: almalinux:9
    command: ["sleep", "1000"]
