5-annotations.yaml
apiVersion: v1
kind: Pod

metadata:
 name: annotations
 label:
  project: robobshop
  environment: dev
 
annotations:
  description: hi i am annotation i can handle big text
  project: this is project executed in kubernetes
  dockerhub: https://dockerhub.io


spec:
  containers:
  - name: nginx
    image: nginx
