6-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resources
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cup: "100m"
      limits:
        memory: "128Mi"
        cpu: "150m"
