8-configmap.yaml

apiVersion: v1
kind: Pod
metadata:
  name: env-configMap
spec:
  containers:
  - name: nginx
    image: nginx
