9-secret.yaml

apiVersion: v1
kind: Pod
metadata:
  name: env-secret
spec:
  containers:
  - name: nginx
    image: nginx
