10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  lables:
    purpose: service-demo
spec:
  selector:
    environment: dev
  ports:
  - protocol: TCP
    port: 80 # service port
    targetPort: 80 # container port
---

apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    environment: dev

spec:
  containers:
  - name: nginx
    image: nginx
